[gd_scene load_steps=8 format=3 uid="uid://cde53tihhbiw8"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_7k5tl"]
[ext_resource type="Texture2D" uid="uid://c2cxf2fhcksdy" path="res://images/user_interface/dialogue.png" id="2_kwgar"]
[ext_resource type="Theme" uid="uid://d3skd85tu8lgn" path="res://resources/themes/shop.tres" id="3_oo30d"]

[sub_resource type="Animation" id="Animation_rutef"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_7ae7l"]
resource_name = "trans_in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1080, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_rjft0"]
resource_name = "trans_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1080, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ytey2"]
_data = {
"RESET": SubResource("Animation_rutef"),
"trans_in": SubResource("Animation_7ae7l"),
"trans_out": SubResource("Animation_rjft0")
}

[node name="shop" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7k5tl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.181
anchor_right = 0.794
anchor_bottom = 0.668
offset_left = -0.240021
offset_top = 0.519989
offset_right = 0.519897
offset_bottom = -0.440063
texture = ExtResource("2_kwgar")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ytey2")
}

[node name="Close" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.675
anchor_top = 0.272
anchor_right = 0.742
anchor_bottom = 0.302
offset_top = 0.23999
offset_right = -0.640137
offset_bottom = -0.160004
theme = ExtResource("3_oo30d")
text = "Close"

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.404
anchor_top = 0.259
anchor_right = 0.609
anchor_bottom = 0.346
offset_left = -0.680054
offset_top = 0.279999
offset_right = 0.719971
offset_bottom = -10.68
theme = ExtResource("3_oo30d")
theme_override_font_sizes/font_size = 64
text = "NAME"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Price" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.591
anchor_top = 0.333
anchor_right = 0.743
anchor_bottom = 0.375
offset_left = 0.279907
offset_top = 0.359985
offset_right = -0.560059
offset_bottom = -3.00003
theme = ExtResource("3_oo30d")
theme_override_font_sizes/font_size = 32
text = "Price
"
autowrap_mode = 3

[node name="Count" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.592
anchor_top = 0.373
anchor_right = 0.734
anchor_bottom = 0.415
offset_left = 0.359985
offset_top = 0.159973
offset_right = 0.719971
offset_bottom = -3.20001
theme = ExtResource("3_oo30d")
theme_override_font_sizes/font_size = 32
text = "Available
"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(952, 444)

[node name="shop_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.475
anchor_top = 0.517
anchor_right = 0.542
anchor_bottom = 0.546
offset_left = -6.10352e-05
offset_top = -0.360046
offset_right = -0.640137
offset_bottom = 0.320007
theme = ExtResource("3_oo30d")
text = "Buy"

[node name="next_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.584
anchor_top = 0.45
anchor_right = 0.651
anchor_bottom = 0.465
offset_left = 0.719849
offset_top = -16.0
offset_right = 0.0799561
offset_bottom = -0.200043
theme = ExtResource("3_oo30d")
text = "next"

[node name="previous_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.351
anchor_top = 0.437
anchor_right = 0.417
anchor_bottom = 0.467
offset_left = -0.920044
offset_top = 0.039978
offset_right = 0.359924
offset_bottom = -0.360016
theme = ExtResource("3_oo30d")
text = "previous
"

[connection signal="button_up" from="Close" to="." method="_on_close_button_up"]
[connection signal="button_up" from="shop_button" to="." method="_on_shop_button_button_up"]
[connection signal="button_up" from="next_button" to="." method="_on_next_button_button_up"]
[connection signal="button_up" from="previous_button" to="." method="_on_previous_button_button_up"]
